--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,15 +1,22 @@
-<h1>Burger</h1>
-
-<h2>Burgers you have eaten</h2>
-
-<ul>
-  {{#each burger}}
-    {{#unless devoured}}
-      {{> burger/burger-block devoured=true}}
-    {{/unless}}
-  {{/each}}
-</ul>
-
+<div class="container">
+  <div class="row">
+    <div class="col s0 m2 l3"></div>
+    <div class="col s12 m8 l6">
+      <div class="card">
+        <div class="card-image">
+          <img src="/assets/images/burger.jpg">
+          <span class="card-title">Burgers!</span>
+        </div>
+        <div class="card-content">
+          <p>Use this app to keep tract of all the burgers you want to eat!</p>
+        </div>
+        <div class="col s0 m2 l3"></div>
+      </div>
+    </div>
+  </div>
+        
+<div class="row">
+<div class="col l6">  
 <h2>Burgers you want to eat</h2>
 
 <ul>
@@ -19,7 +26,20 @@
     {{/if}}
   {{/each}}
 </ul>
+</div>
+<div class="col l6"> 
+<h2>Burgers you have eaten</h2>
 
+<ul>
+  {{#each burger}}
+    {{#unless devoured}}
+      {{> burger/burger-block devoured=true}}
+    {{/unless}}
+  {{/each}}
+</ul>
+</div>
+
+</div>
 <h2>Enter a burger</h2>
 <form class="create-form">
 
@@ -30,9 +50,10 @@
 
   <div class="form-group">
     <label for="devoured">Devoured</label><br>
-    <input type="radio" name="devoured" value="1" checked>eaten <br>
-    <input type="radio" name="devoured" value="0"> Not yet eaten
+    <input type="radio" name="devoured" value="1" checked ><span>eaten</span> <br>
+    <input type="radio" name="devoured" value="0"> <span>Not yet eaten</span>
   </div>
 
   <button type="submit">Add a new burger</button>
 </form>
+</div>
