--- a/views/partials/burger/burger-block.handlebars
+++ b/views/partials/burger/burger-block.handlebars
@@ -1,9 +1,9 @@
 <li>
 	{{burger_name}}
 
-	<button class="eatTheBurger" data-id="{{id}}" data-newsleep="{{devoured}}">
-		{{#if devoured}}You want to eat this burger again!{{else}}Go eat it!{{/if}}
+	<button class="eatTheBurger btn" data-id="{{id}}" data-newsleep="{{devoured}}">
+		{{#if devoured}}Add back to the list{{else}}Go eat it!{{/if}}
 	</button>
 
-	<button class="deleteburger" data-id="{{this.id}}">DELETE!</button>
+	<button class="deleteburger btn" data-id="{{this.id}}">DELETE!</button>
 </li>
